--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,6 +2,8 @@ name: Validate pull request before putting into queue
 
 on:
   pull_request:
+  merge_queue:
+    types: [checks_requested]
 
 jobs:
   validate-pr:
